--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen{
     background-color: #abc1d1;
-    height:11000vh;
+    height:500vh;
 }
 
 #chat-screen .status-bar,
@@ -21,12 +21,26 @@
     z-index: 1;
 }
 
+@keyframes fadeIn{
+    from{
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to{
+        transform: none;
+        opacity:1;
+    }
+}
+
+
 
 .main-chat{
-   margin-top: 120px;
+   margin-top: 180px;
    display: flex;
    flex-direction:column;
    align-items: center;
+    animation: fadeIn 0.8s linear;
+
 }
 
 .chat__timestamp{
@@ -106,6 +120,7 @@
     padding:5px 25px;
     align-items: center;
     box-sizing: border-box;
+    transition: all 0.3s ease-in-out;
 }
 
 .reply .reply__column:first-child{
@@ -128,6 +143,7 @@
     width: 95%;
     border:var(--main-border);
     border-radius: 20px;
+    transition: all 0.3s ease-in-out;
 }
 
 .reply__column:last-child > i,
@@ -159,4 +175,30 @@
 
 .reply__column button i{
 opacity: 1;
+}
+
+
+
+.reply .reply__column:first-child,
+.reply #icon-push,
+.reply button{
+    transition: opacity 0.5s ease-in-out;
+}
+
+
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within #icon-push,
+.reply:focus-within button{
+    opacity:0;
+}
+
+.reply:focus-within input {
+    width: 87vw;
+    transform: translateX(-12%) translateY(-80px);
+  
+}
+
+.reply:focus-within {
+    transform: translateY(80px);
 }
