--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -18,11 +18,28 @@
     
 }
 
+@keyframes notificationAnimation{
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: translateY(-5px) rotateY(360deg);
+    }
+    100%{
+        transform: none;
+    }
+}
+
+
 .nav__notification{
    position:absolute;
    left:15px;
   bottom:15px;
+  animation:notificationAnimation 2s ease-in-out infinite;
 }
+
+
+
 
 
 .nav__notification2{
@@ -38,4 +55,34 @@
    position:absolute;
    left:30px;
   bottom:25px;
+}
+
+@keyframes appearBtnAnimation{
+    from {
+        
+        opacity: 0;
+    }
+    to{
+        transform: none;
+        opacity: 1;
+    }
+}
+
+
+.nav_btn{
+    transform: translateY(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+
+.nav_btn:nth-child(2){
+    animation-delay:0.2s;
+}
+
+.nav_btn:nth-child(3){
+    animation-delay:0.4s;
+}
+
+.nav_btn:last-child{
+    animation-delay:0.6s;
 }
