--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -15,3 +15,18 @@
 .screen-hearder__icons span{
     margin-left: 25px;
 }
+
+@keyframes rotatecog{
+    from{
+        transform: none;
+    }
+    to{
+        transform: rotateZ(360deg);
+    
+    }
+}
+
+
+.screen-hearder__icons .fa-cog:hover{
+    animation: rotatecog 1s linear infinite;
+}
