--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -29,3 +29,28 @@ color:rgba(0, 0, 0, 0.3);
    justify-content: space-between;
    color:rgba(0, 0, 0, 0.5);
 }
+
+@keyframes hideSplashScreen{
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+#splash-screen{
+    background-color: var(--yellow);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:120px;
+    animation: hideSplashScreen 0.5s ease-in-out forwards;
+    animation-delay: 1s;
+}
+
