--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 @import "components/alt-screen-header.css";
 @import "screens/settings.css";
 @import "screens/chat.css";
+@import "components/no-mobile.css";
 
 
 body{
